# ssa

./: .flaskenv  .gitignore  Makefile  pyproject.toml  setup.py
.github/workflows/: python-app.yml
scripts/: vertabelo_xml_to_sqlalchemy_model.py
ssa/: app.py  ssa.db
ssa/ext/auth/: commands.py  models.py
ssa/ext/cli/: __init__.py
ssa/ext/config/: __init__.py
ssa/ext/db/: __init__.py  commands.py  models.py
ssa/ext/site/: __init__.py  main.py
ssa/templates/: about.html  base.html  index.html  saints.html
ssa/templates/macros/: list_item.html
tests/: conftest.py  test_app.py  test_ssa.py
