[tool.poetry]
name = "ssa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
setuptools = "^53.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "*"
flake8 = "*"
flask-debugtoolbar = "*"
flask-shell-ipython = "*"
ipdb = "*"
ipython = "*"
isort = "*"
pytest-flask = "*"
pytest-cov = "*"


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"




